# stick-demo

./: .gitignore  BMI270.md  Cargo.toml  M5PM1_Datasheet_CN.md  build.sh  provision.example.json  reasonix.toml  sdkconfig.defaults
demo/: Cargo.toml
demo/src/: main.rs
stick-s3/: Cargo.toml  build.rs
stick-s3/src/: audio.rs  battery.rs  bmi270_config.rs  buttons.rs  display.rs  es8311.rs  framebuffer.rs  i2c_bus.rs  imu.rs  led.rs  lib.rs  mic.rs  nvs.rs  pmic.rs  provision.rs  sleep.rs  speaker.rs  wifi.rs
ui/: Cargo.toml  app.slint  build.rs  lv_conf.h
ui/src/: main.rs
