[package]
name = "stick_s3"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-idf-hal = "0.46"
embedded-graphics = "0.8.1"
display-interface-spi = "0.5.0"
display-interface = "0.5.0"
embedded-hal = "1"
log = "0.4"

esp-idf-svc = { version = "0.52", default-features = false, features = ["alloc"], optional = true }
embedded-svc = "0.29"

[features]
default = ["wifi"]
wifi = ["esp-idf-svc"]

[build-dependencies]
embuild = { version = "0.31", features = ["espidf"] }
serde_json = "1"
