[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
stick_s3 = { path = "../stick-s3" }
esp-idf-svc = { version = "0.52", default-features = false, features = ["alloc"] }
esp-idf-hal = "0.46"
embedded-hal = "1"
log = "0.4"

# LVGL — 嵌入式 GUI 框架 (C 绑定)
lvgl = { version = "0.6", default-features = false }

[build-dependencies]
embuild = { version = "0.31", features = ["espidf"] }

[features]
default = ["esp-idf-svc/native"]
